*gitlab-ce-9.0.1 (29 Mar 2017)

  29 Mar 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.0.1.ebuild,
  metadata.xml:
  www-apps/gitlab-ce:  Added ebuild for Gitlab CE 9.0.1; this is the first one
  with the gitaly USE flag; though that is not supported yet, it must therefore
  be disabled at the moment.

  28 Mar 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-9.0.0.ebuild,
  gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:   Moved warning about MySQL migrations to the postinst
  phase, as the config phase might fail when the database is not updated. So the
  message must be displayed earlier.

  28 Mar 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-9.0.0.ebuild,
  gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  Fixed the latest ebuild to use yarn instead of npm.

*gitlab-ce-9.0.0 (28 Mar 2017)

  28 Mar 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.0.0.ebuild:
  www-apps/gitlab-ce:   Added ebuild for Gitlab CE 9.0.0, dropping the ~arm
  keyword due to the dependency to yarn, which is not available on unstable arm.

  19 Mar 2017; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-9.0.0_rc4.ebuild,
  gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  Updated ebuild for gitlab-ce-9999 and also cleaned
  dependencies for gitlab-9.0.0_rc4

*gitlab-ce-9.0.0_rc4 (19 Mar 2017)

  19 Mar 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/02-gitlab-ce-9.0.0-fix-redis-config-path.patch,
  +files/05-gitlab-ce-9.0.0-replace-sys-filesystem.patch,
  +gitlab-ce-9.0.0_rc4.ebuild, -gitlab-ce-8.17.0_rc3.ebuild:
  www-apps/gitlab-ce:   Added ebuild for Gitlab CE 9.0.0 RC4

*gitlab-ce-8.15.8 (21 Mar 2017)
*gitlab-ce-8.16.8 (21 Mar 2017)
*gitlab-ce-8.17.4 (21 Mar 2017)

  21 Mar 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.15.8.ebuild,
  +gitlab-ce-8.16.8.ebuild, +gitlab-ce-8.17.4.ebuild, -gitlab-ce-8.15.4.ebuild,
  -gitlab-ce-8.15.7.ebuild, -gitlab-ce-8.16.4.ebuild, -gitlab-ce-8.16.5.ebuild,