@@ -1,3 +1,10 @@
+*gitlab-ce-9.0.1-r1 (30 Mar 2017)
+
+  30 Mar 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.0.1-r1.ebuild,
+  -gitlab-ce-9.0.0.ebuild, -gitlab-ce-9.0.1.ebuild, gitlab-ce-9999.ebuild:
+  www-apps/gitlab-ce:  updated dependency on Ruby to ruby-2.3 for Gitlab CE >=9;
+  removed ebuild for version 9.0.0, as version 9.0.1 is out.
+
 *gitlab-ce-9.0.1 (29 Mar 2017)
 
   29 Mar 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.0.1.ebuild,
